<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PreferencesActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/contCheck"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="21dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/confirmBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberEntry" />

    <EditText
        android:id="@+id/usernameEntry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:layout_marginEnd="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="9dp"
        android:layout_marginStart="9dp"
        android:ems="10"
        android:hint="@string/enterUsername"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/contactName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/numberEntry"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/enterContNum"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/contCheck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactName" />

    <EditText
        android:id="@+id/contactName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="9dp"
        android:layout_marginStart="9dp"
        android:ems="10"
        android:hint="@string/enterContName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/numberEntry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameEntry" />

    <Button
        android:id="@+id/confirmBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:onClick="formValidationAndSend"
        android:text="@string/confirm"
        app:layout_constraintBottom_toTopOf="@+id/backBtn"
        app:layout_constraintEnd_toEndOf="@+id/backBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contCheck" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="83dp"
        android:onClick="goBack"
        android:text="@string/go_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmBtn" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="9dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/add_your_contact_s_details_here"
        app:layout_constraintBottom_toTopOf="@+id/usernameEntry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>